# Computer-Network-Project-Socket-programming-

./: .gitignore  README.md
API_Server/: Server.sln
API_Server/Server/: API_Server.cpp  CMakeLists.txt  Server.cpp  Server.vcxproj  note.txt
API_Server/Server/data/: 디버그용(cmd).txt
API_Server/Server/data/mailbox/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  index.json  jack_1.json
Client/Mail_Client_Cpp/: CMakeLists.txt  Mail_Client.cpp
Client/mail-client/: index.html  package-lock.json  package.json
Client/mail-client-web/: index.html  package.json  vite.config.js
Client/mail-electron/: package.json  test.js
Client/mail-electron-vite/: README.md  electron-builder.yml  eslint.config.mjs  package.json
Client/mail-electron-vite/src/main/: index.js
Client/mail-electron-vite/src/preload/: index.js
Client/mail-electron-vite/src/renderer/: index.html
Client/mail-electron-vite/src/renderer/assets/: base.css
Client/mail-electron-vite/src/renderer/src/: communicator.js  renderer.js
Client/mail-electron-vite/src/renderer/temp/: temp.html  temp.js
Client/mail-electron/src/: main.js
Client/mail-electron/src/vite/: index.html
Client/mail-electron/src/vite/assets/: index-BHVqpqXV.css  index-D4wiLl8M.js
Client/mail-web/src/: main.js  style.css
Client/test-server/: index.js
Web_Server/: CMakeLists.txt  WebProxyServer.cpp
